k3d/5-deploy-ingressfornginx.yaml
# deploy-ingressfornginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
